syntax = "proto3";

package ing.grpc.common.events;

message IsgId {
	string value = 1;
}

enum EventStream {
    UnknownStream = 0;
    TestStream = 1;
    Account = 2;
    User = 3;
    Content = 4;
    Build = 5;
}

enum EventType {
    UnknownType = 0;
    TestType = 1;
}
